@@ -1,2 +1,4 @@
+class
 pceclasshierarchy.eps
 *.pdf
+*.png
